common table added

--- a/src/plugins/i18next/locales/ru/common.json
+++ b/src/plugins/i18next/locales/ru/common.json
@@ -34,6 +34,7 @@
 		"id": "ID",
 		"light": "Светлая",
 		"name": "Название",
+		"search": "Поиск",
 		"status": "Статус",
 		"success": "Успешно",
 		"unsuccess": "Неудачно"
