--- a/src/plugins/i18next/locales/cn/common.json
+++ b/src/plugins/i18next/locales/cn/common.json
@@ -34,6 +34,7 @@
 		"id": "ID",
 		"light": "Light",
 		"name": "Name",
+		"search": "Search",
 		"status": "Status",
 		"success": "Success",
 		"unsuccess": "Unsuccess"
