common tables added

--- a/src/plugins/i18next/locales/ru/common.json
+++ b/src/plugins/i18next/locales/ru/common.json
@@ -14,6 +14,9 @@
 		},
 		"campaigns": {
 			"campaigns": "Кампании"
+		},
+		"users": {
+			"users": "Пользователи"
 		}
 	},
 	"apps": {
@@ -29,11 +32,13 @@
 		"adsManager": "Ads manager",
 		"apps": "Приложения",
 		"balance": "Баланс",
+		"browserExtension": "Расширение для браузера",
 		"currency": "Валюта",
 		"dark": "Темная",
 		"id": "ID",
 		"light": "Светлая",
 		"name": "Название",
+		"platform": "Платформа",
 		"search": "Поиск",
 		"status": "Статус",
 		"success": "Успешно",
@@ -43,6 +48,26 @@
 		"bundles": "Связки",
 		"createAds": "Залить рекламу",
 		"uploadJobs": "Очередь заливки"
+	},
+	"facebook": {
+		"autoCampaignCreation": "Автоматизация создания рекламных кампаний",
+		"autoCampaignCreationSub": "Dolphin может создавать десятки кампаний в разных рекламных кабинетах. Посмотри, как это работает",
+		"title1": "Управляй рекламой всех аккаунтов",
+		"title2": "в одном окне"
+	},
+	"proxy": {
+		"host": "Хост",
+		"login": "Логин",
+		"password": "Пароль",
+		"port": "Порт",
+		"proxy": "Прокси",
+		"type": "Тип"
+	},
+	"tikTok": {
+		"autoCampaignCreation": "Автоматизация создания рекламных кампаний",
+		"autoCampaignCreationSub": "Dolphin может создавать десятки кампаний в разных рекламных кабинетах. Посмотри, как это работает",
+		"title1": "Управляй рекламой всех аккаунтов",
+		"title2": "в одном окне"
 	},
 	"validation": {
 		"alpha": "Поле {{field}} может содержать только буквы",
