--- a/src/plugins/i18next/locales/cn/common.json
+++ b/src/plugins/i18next/locales/cn/common.json
@@ -66,6 +66,7 @@
 	"tikTok": {
 		"autoCampaignCreation": "Automation of advertising campaign creation",
 		"autoCampaignCreationSub": "Dolphin — provides a facility to create dozens of campaigns in different ad accounts. See how it works",
+		"featuresInDevelopment": "Features in development",
 		"title1": "Manage ads for all",
 		"title2": "accounts in one window"
 	},
