--- a/src/plugins/i18next/locales/ru/common.json
+++ b/src/plugins/i18next/locales/ru/common.json
@@ -66,6 +66,7 @@
 	"tikTok": {
 		"autoCampaignCreation": "Автоматизация создания рекламных кампаний",
 		"autoCampaignCreationSub": "Dolphin может создавать десятки кампаний в разных рекламных кабинетах. Посмотри, как это работает",
+		"featuresInDevelopment": "Функции в разработке",
 		"title1": "Управляй рекламой всех аккаунтов",
 		"title2": "в одном окне"
 	},
